--- a/.github/workflows/deploy_cdn_pnpg.yml
+++ b/.github/workflows/deploy_cdn_pnpg.yml
@@ -26,11 +26,11 @@ on:
 jobs:
   release_and_deploy:
     uses: pagopa/selfcare-commons/.github/workflows/call_release_cdn.yml@main
-    name: 'login frontend'
+    name: "Release [${{ inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev' }}]"
     secrets: inherit
     with:
       environment: ${{ inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev' }}
-      file_environment: ${{ inputs.env != null && format('fe_{0}_pnpg.env', inputs.env) || (startsWith(github.ref_name, 'releases/') && 'fe_uat_pnpg.env') || 'fe_dev_pnpg.dev' }}
+      file_environment: ${{ format('fe_{0}_pnpg.env', (inputs.env != null && inputs.env || (startsWith(github.ref_name, 'releases/') && 'uat') || 'dev')) }}
       storage_account_name: "weupnpgcheckoutsa"
       profile_name: weu-pnpg-checkout-cdn-profile
       endpoint_name: weu-pnpg-checkout-cdn-endpoint
