--- a/.github/workflows/create_release_branch.yml
+++ b/.github/workflows/create_release_branch.yml
@@ -34,5 +34,10 @@ jobs:
 
       - name: Trigger release and Deploy on CDN
         run: |
-          gh workflow run deploy-cdn.yml \
-            --ref ${{ steps.create_branch.outputs.new_branch_name }} --f env=uat
+          gh workflow run deploy_cdn.yml \
+            --ref ${{ steps.create_branch.outputs.new_branch_name }}
+
+      - name: Trigger release and Deploy on CDN PNPG
+        run: |
+          gh workflow run deploy_cdn_pnpg.yml \
+            --ref ${{ steps.create_branch.outputs.new_branch_name }}
