SELC-6675 generate state and redirect URI

--- a/.env.development.local
+++ b/.env.development.local
@@ -8,6 +8,10 @@ REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie
 REACT_APP_PRODUCTS_ASSET=https://selfcare.pagopa.it/assets/products.json
 REACT_APP_LOGIN_ALERT_BANNER=https://selfcare.pagopa.it/assets/login-alert-message.json
 
+REACT_APP_URL_FE_LOGIN=https://dev.selfcare.pagopa.it/auth
+REACT_APP_OI_CLIENT_ID=client_id_selfcare_test
+REACT_APP_OI_BASE_URL=https://dev.oneid.pagopa.it/login
+
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 REACT_APP_URL_FE_LANDING=http://selfcare/landing
