--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/react-router": "^5.1.16",
+    "@types/lodash": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "7.11.0",
