--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 INLINE_RUNTIME_CHUNK=false
 
 REACT_APP_ENABLE_ASSISTANCE=true
+
+REACT_APP_API_DASHBOARD_TIMEOUT_MS=300000
+
+REACT_APP_API_MOCK_PARTIES=false
