--- a/.env.development.local
+++ b/.env.development.local
@@ -19,6 +19,8 @@ REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
 REACT_APP_URL_API_LOGIN=https://api.dev.selfcare.pagopa.it/spid-login/v1
 
+REACT_APP_API_MOCK_PARTIES=false
+
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 REACT_APP_OT_SRC='dummyUrl',
 REACT_APP_OT_TOKEN='token',
