--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.1.2",
     "url": "^0.11.4",
     "util": "^0.12.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
