[SELC-6676] feat: Integrare api for token exchage (#361)
* SELC-6676 add client for api and install deeps

* modify error page and call api to get selfcare token

* SELC-6676 jest config change

* unit tests

* env name change

* generate codegen before build

* SELC-6676 update response of api exchange

--- a/.env.test.local
+++ b/.env.test.local
@@ -10,6 +10,8 @@ REACT_APP_URL_FE_LOGIN=https://dev.selfcare.pagopa.it/auth
 REACT_APP_OI_CLIENT_ID=client_id_selfcare_test
 REACT_APP_OI_BASE_URL=https://dev.oneid.pagopa.it/login
 
+REACT_APP_API_MOCK=true
+
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 REACT_APP_URL_FE_LANDING=http://selfcare/landing
