add Base url env for oidc/exchange

--- a/.env.test.local
+++ b/.env.test.local
@@ -18,6 +18,7 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
 REACT_APP_URL_API_LOGIN=https://api.dev.selfcare.pagopa.it/spid-login/v1
+REACT_APP_URL_API_AUTH=https://api.dev.selfcare.pagopa.it/auth
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 REACT_APP_OT_SRC='dummyUrl',
