--- a/.env.development.local
+++ b/.env.development.local
@@ -10,7 +10,7 @@ REACT_APP_LOGIN_ALERT_BANNER=https://selfcare.pagopa.it/assets/login-alert-messa
 
 REACT_APP_URL_FE_LOGIN=https://dev.selfcare.pagopa.it/auth
 REACT_APP_OI_CLIENT_ID=client_id_selfcare_test
-REACT_APP_OI_BASE_URL=https://dev.oneid.pagopa.it/login
+REACT_APP_OI_BASE_URL=https://dev.oneid.pagopa.it
 
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
