SELC-6679 remove old login and update tests

--- a/package.json
+++ b/package.json
@@ -97,10 +97,10 @@
   },
   "jest": {
     "coveragePathIgnorePatterns": [
+      "src/api/generated",
       "src/index.tsx",
       "src/reportWebVitals.ts",
-      "src/utils/constants.ts",
-      "src/utils/IDPS.ts"
+      "src/utils/constants.ts"
     ]
   }
 }
