--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,10 +1,6 @@
 # see https://help.github.com/en/articles/about-code-owners#example-of-a-codeowners-file
 
-* @pagopa/selfcare-contributors
-
-# engineering-team-cloud-eng
-/infra/ @pagopa/engineering-team-cloud-eng
-/.github/ @pagopa/engineering-team-cloud-eng
+* @pagopa/selfcare-contributors @OraldoDoci @GabrieleMaiocchiFilippo
 
 /src/ @OraldoDoci @GabrieleMaiocchiFilippo
 /public/ @OraldoDoci @GabrieleMaiocchiFilippo
