--- a/.env.development.local
+++ b/.env.development.local
@@ -37,3 +37,6 @@ REACT_APP_ANALYTICS_MOCK=true
 REACT_APP_ANALYTICS_DEBUG=false
 REACT_APP_MIXPANEL_TOKEN=DUMMY
 REACT_APP_ONETRUST_DOMAIN_ID=a8f58d7a-7f6a-4fe6-ac02-f95bac3876d4-test
+
+REACT_APP_ENABLE_OTP=true
+REACT_APP_ENABLE_SEND_MAIL_OTP=true
