--- a/.env.test.local
+++ b/.env.test.local
@@ -33,3 +33,6 @@ REACT_APP_ANALYTICS_ENABLE=true
 REACT_APP_ANALYTICS_MOCK=true
 REACT_APP_ANALYTICS_DEBUG=false
 REACT_APP_MIXPANEL_TOKEN=DUMMY
+
+REACT_APP_ENABLE_OTP=true
+REACT_APP_ENABLE_SEND_MAIL_OTP=true
