--- a/package.json
+++ b/package.json
@@ -4,24 +4,22 @@
   "private": true,
   "homepage": "/auth/",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/base": "^5.0.0-beta.28",
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.14.1",
     "@pagopa/mui-italia": "^1.6.1",
     "@pagopa/selfcare-common-frontend": "^1.34.62",
+    "@types/react": "18.3.16",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "env-var": "^7.1.1",
     "i18next": "^23.7.11",
     "react": "^18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-datepicker": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.1.2",
-    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
-    "typescript": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "url": "^0.11.4",
     "util": "^0.12.5",
     "uuid": "^11.1.0",
@@ -73,9 +71,7 @@
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.17.13",
     "@types/node": "^12.20.19",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/react-router": "^5.1.16",
+    "@types/redux-logger": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "api-spec-converter": "^2.12.0",
@@ -92,6 +88,7 @@
     "rimraf": "^6.0.1"
   },
   "resolutions": {
+    "@types/react": "18.3.16",
     "nth-check": ">=2.0.1",
     "postcss": ">=8.4.31"
   },
