--- a/.github/workflows/deploy_cdn.yml
+++ b/.github/workflows/deploy_cdn.yml
@@ -43,9 +43,11 @@ jobs:
     name: 'Promote prerelase release'
     if: ${{ inputs.env == 'prod' }}
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write
     needs: [release_and_deploy]
     steps:
       - uses: pagopa/selfcare-commons/github-actions-template/promote-release@main
         with:
-          github_path_token: ${{ secrets.GH_PAT_VARIABLES }}
+          github_path_token: ${{ secrets.GITHUB_TOKEN }}
           release_version: ${{ vars.CURRENT_UAT_VERSION }}
