[SELC-8078] feat: Add new logout google page

--- a/.env.development.local
+++ b/.env.development.local
@@ -40,3 +40,4 @@ REACT_APP_ONETRUST_DOMAIN_ID=a8f58d7a-7f6a-4fe6-ac02-f95bac3876d4-test
 
 REACT_APP_ENABLE_OTP=true
 REACT_APP_ENABLE_SEND_MAIL_OTP=true
+REACT_APP_GOOGLE_LOGIN_URL=https://accounts.google.com/o/saml2/initsso
