--- a/.env.test.local
+++ b/.env.test.local
@@ -36,3 +36,4 @@ REACT_APP_MIXPANEL_TOKEN=DUMMY
 
 REACT_APP_ENABLE_OTP=true
 REACT_APP_ENABLE_SEND_MAIL_OTP=true
+REACT_APP_GOOGLE_LOGIN_URL=https://accounts.google.com/o/saml2/initsso
