chore: Adding repository name (repository_name) when gitub action set a  variable

--- a/.github/workflows/deploy_cdn.yml
+++ b/.github/workflows/deploy_cdn.yml
@@ -51,3 +51,4 @@ jobs:
         with:
           github_path_token: ${{ secrets.GH_PAT_VARIABLES }}
           release_version: ${{ vars.CURRENT_UAT_VERSION }}
+          repository_name: ${{ github.event.repository.name }}
