--- a/.github/workflows/deploy_cdn.yml
+++ b/.github/workflows/deploy_cdn.yml
@@ -51,4 +51,4 @@ jobs:
         with:
           github_path_token: ${{ secrets.GITHUB_TOKEN }}
           release_version: ${{ vars.CURRENT_UAT_VERSION }}
-          repository_name: ${{ github.event.repository.name }}
+          repository_name: ${{ github.repository }}
