--- a/.github/workflows/deploy_cdn.yml
+++ b/.github/workflows/deploy_cdn.yml
@@ -49,6 +49,6 @@ jobs:
     steps:
       - uses: pagopa/selfcare-commons/github-actions-template/promote-release@main
         with:
-          github_path_token: ${{ secrets.GITHUB_TOKEN }}
+          github_path_token: ${{ secrets.GH_PAT_VARIABLES }}
           release_version: ${{ vars.CURRENT_UAT_VERSION }}
           repository_name: ${{ github.repository }}
