Update create_release_branch set correct value for repository_name

--- a/.github/workflows/create_release_branch.yml
+++ b/.github/workflows/create_release_branch.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           version_bump: ${{ inputs.version-bump }}
           github_path_token: ${{ secrets.GH_PAT_VARIABLES }}
-          repository_name: ${{ github.event.repository.name }}
+          repository_name: ${{ github.repository }}
 
       - name: Trigger release and Deploy on CDN
         run: |
